--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -4833,6 +4833,9 @@
  hunfo.26.t:0 "佛法远播"
  hunfo.26.d:0 "诸位大德，诸位同修：\n\n佛法者，觉悟之道，慈悲之行，普度众生之法门，岂能局限一地，独照一隅？佛陀涅槃前曾言：“应广宣妙法，使群生悉知。”此乃吾辈佛子之责任，亦是佛法久住世间之根本。今世界动荡，物欲横流，人心困于贪嗔痴，沉溺于生死轮回，若无正法指引，众生何以解脱？是故，我等当奋起精进，使佛法远播寰宇，让觉悟之光普照世界！\n\n回顾往昔，佛法自印度东来，入雪域，进中土，传扶桑，历经千年，化育群生。今者，科技日进，交通发达，国界虽存而世界已近，佛子更当顺应此势，乘愿弘法，使正法之声响彻五洲，使四海众生皆得法益。然弘法非徒口宣，亦需身行，吾等应以身示道，持戒精严，修慈行善，使人观吾之行，闻吾之言，生信向道，乃能令佛法得以弘扬，而非仅存于书卷塔庙之间。\n\n是故，我辈当立大愿，发大心，不仅于一国一地传法，而当胸怀寰宇，远播佛音。愿此正法，如灯燃灯，生生不息，愿天下众生，因闻佛法，破迷开悟，超凡入圣，使娑婆世界，终成清净庄严之净土！"
  hunfo.26.a:0 "南无本师释迦牟尼佛！"
+ hunfo.27.t:0 "水落石出"
+ hunfo.27.d:0 "在晨钟暮鼓回荡的禅院深处，释太虚端坐于莲台之上，手捻念珠，眉宇间却难掩凝重。继位之初，他便察觉到许多过往被刻意掩盖的真相，而最令他心神不安的，便是正明法师之死。尽管太虚对他的佛法充满了厌恶，但是他就如此突然病倒，直至撒手人寰。同时种种迹象表明，他的离世绝非自然，黑暗的阴影盘踞在历史的缝隙之中，等待被揭开的一日。\n\n随着对旧案的深入调查，一个名字浮现在释太虚的眼前——释照空，又或者“伊格纳茨·特雷比奇-林肯”，这位游走于国际政治与宗教之间的神秘人物，披着佛教的外衣，却暗藏杀机。他不仅是情报贩子，更是一名擅长操纵人心的阴谋家。释太虚翻阅卷宗，逐字逐句地分析过往的交集，终于找到了关键的证据——此前顾净缘病重前夕，林肯曾数次秘密出入他的府邸，且在他日渐虚弱的过程中，顾净缘惯用的茶水竟曾被林肯一人接触。更可怖的是，在林肯的私人笔记中，一行晦涩的字句昭示着他的罪行：“一粒微尘，足以湮灭天日。法既存，则人可去。”\n\n太虚合上卷宗，目光沉静而坚定。真相已明，公道当显。"
+ hunfo.27.a:0 "善恶有报，因果不昧"
  
  hunfo.10.t:0 "一位奇异的高僧"
  hunfo.10.d:0 "在我们收复了上海之后，我们的士兵在那里遇到了一个奇怪的家伙。\n\n那是上海的一座不大不小的寺庙，里面的僧侣却不是中国人，甚至不是日本人或者印度人，他们皮肤白皙，眼睛泛蓝。一看就知道是一伙欧洲人。但他们拒绝与我们的普通士兵交谈，那个为首者表示这些普通士兵修行不够，为了知道更多信息，正明法师决定亲自前往与他们交谈。终于得知，为首者法名释照空，原名伊格纳茨·特雷比奇-林肯，是一名匈牙利人，在欧洲时误信了一些基督教和犹太教，在这些邪教的诱导下他在匈牙利犯了事流亡各地，在西方的那些邪恶政府的诱导下做了许多坏事也认识了许多政府高层。最终出于各种原因他来到了中国，这个最伟大的东方民族的伟大国度，并在这里他受到了佛祖的感召，最终剃度，皈依正信。\n\n在听完了他的这番论述后，正明法师第一时间联系了各大高僧，这样一位与西方有着密切接触，而且如今也有传闻他在接受西方某些组织的资助的匈牙利佛教徒。也许他能够为我们与西方人的交流搭起一道桥梁？我们是不是可以承认这座寺庙的地位并给予他些许职务？"
