--- a/localisation/KR_Liangguang_l_simp_chinese.yml
+++ b/localisation/KR_Liangguang_l_simp_chinese.yml
@@ -778,8 +778,8 @@
  lngcivilwar.17.a:0 "他们将为我们的宏伟目标服务"
  lngcivilwar.18.t:0 "旧桂系寻求庇护"
  lngcivilwar.18.d:0 "马济和陆裕光曾经是统治广西的军阀领袖，他俩在权力斗争失败后逃离了家乡。自国民党的北伐战争时期起，他们俩就是我们的老相识了，所以他们在被赶出广西后，恳请到我们的军队里去服役，也许是想借此重整旗鼓，在将来的某一天东山再起。"
- lngcivilwar.18.a:0 "还是另寻他处吧"
- lngcivilwar.18.b:0 "当然，欢迎这些老朋友"
+ lngcivilwar.18.a:0 "当然，欢迎这些老朋友"
+ lngcivilwar.18.b:0 "还是另寻他处吧"
  lngcivilwar.19.t:0 "广东的命运"
  lngcivilwar.19.d:0 "现在广东省在我们的控制之下，我们必须选择一个人来接替前任政府。我们集团内部某些高层主张彻底地盘剥广东，以推动广西自身的发展，更重要的是，为日益庞大的现代化军队提供资金。当然，这些意见鼠目寸光。一些更有远见的高层认为，我们应该把广东省政府交给当地精英，这样广东就不会被吸血榨干。"
  lngcivilwar.19.a:0 "盘剥当地！"
