--- a/localisation/KR_Qing_l_simp_chinese.yml
+++ b/localisation/KR_Qing_l_simp_chinese.yml
@@ -27,6 +27,10 @@
  QIE_restored_emperor2: "复位皇帝"
  QIE_restored_emperor3: "复位皇帝"
  QIE_son_of_heaven: "天子\n§g尽管那些反对者指责溥仪不过是个恰好碰上了好时代的傀儡。但通过复辟宪政的实践，溥仪已经证明了自己才是真正的天命所归。§!"
+ QIE_the_diplomat: "外交元老\n§g精通外交，博学多才的颜惠庆凭借其聪明的头脑再度执掌中华民国。他将确保文官统治在北洋政府的首要地位。§!"
+ QIE_the_diplomat_2: "$QIE_the_diplomat$"
+ QIE_marshal_of_tianjin: "津门大帅\n§g王承斌抛弃了自己在直系中的原有地位，却意外地成为了直系残党的主心骨。直清战争中的英勇抗争让他获得了玉帅般的威名。而王大帅的心中只有复仇。§!"
+ QIE_marshal_of_tianjin_2: "$QIE_marshal_of_tianjin$"
 
  QIE_aisin_gioro_puyi: "溥仪"
  QIE_aisin_gioro_puyi_leader_desc:0 "§Y生于：§!§L1906年2月7日；大清帝国、直隶省北京淳亲王府§!\n§Y背景：§!§L$QIE_aisin_gioro_puyi_desc_body$溥仪的统治并不得人心，他不过是一枚橡皮图章，一块强权之间讨价还价的筹码。§!\n\n§Y备注：人们认为溥仪残忍而暴虐，许多人将这种施虐癖归因于他在皇宫中没有得到良好培养。\n溥仪闲坐在紫禁城里，爱上了打网球和练书法。§!"
@@ -53,6 +57,7 @@
  QIE_LIU_MENGGENG_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1881年\n大清帝国 直隶 抚宁\n§Y军旅生涯：§L\n刘梦庚毕业于北洋陆军军医学堂并在各级医疗卫生机构任职期间同不少直系将领建立了密切的联系，这帮助他成为了保定医学院的院长。他从1931年起在北京担任卫生部长，并提出了一项雄心勃勃且影响深远的军事改革计划，其中包括了各类医疗改革。\n§Y重要信息：§L\n他同不少直系将领之间都有家族裙带联系，比如他本人就是曹锟的盟弟。\n与此同时，他也是曹锟和直系情报机关的首脑。"
  QIE_wang_chengbin: "王承斌"
  QIE_WANG_CHENGBIN_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1874年8月21日\n大清帝国 奉天\n§Y派系：§!§g津保派§!\n§Y军旅生涯：§L\n王承斌1907年考入北洋速成武备学堂第二期步兵科，同年入读陆军大学第二期，毕业后出任曹锟的参谋官，协助曹锟镇压辛亥革命。王承斌1912年曾短暂加入过宗社党，为此，吴佩孚曾多次劝曹锟开除王的军籍，曹不以为然，但王承斌与吴佩孚的芥蒂由此而生。\n\n王承斌在曹锟的第三师里稳步晋升，后参与护国运动，成为曹锟的亲信之一。1918年，为了推行段祺瑞的武力统一政策，他在吴佩孚的指挥下进攻湖南，后又在直皖战争中与曹吴二人并肩作战，成为了直系事实上的第三号人物。吴佩孚深恐权位被王承斌取代，竟不断施计离间曹、王二人。\n\n在第一次直奉战争中击败奉系后，王承斌于1922年成为直隶省长，他的天津派和曹锟的保定派共同组成了津保派。为了帮助曹锟当选总统，王承斌曾亲自率队夺取总统印信。但由于吴佩孚的挑拨离间，他最终失去了自己的权位。作为复仇，他协助发动了北京政变。\n\n第二次直奉战争中直系战败后，王承斌说服了曹锟辞职。冯玉祥遭逐后，他只得仓皇逃往租界。为了表示善意，曹锟将王承斌召回帐下，并授予他大帅头衔，然而他始终与玉帅不合。\n§Y重要信息：§L\n他是直系内“天津派”的创建者，这个派系与吴佩孚的“洛阳派”和曹锟的“保定派”同属于直系初期派系。"
+ QIE_wang_chengbin_leader_desc:0 "§Y生于：§!§L1874年8月21日；大清帝国、盛京将军辖区宁远§!\n§Y背景：§!§L王承斌是直系三把手、津门大帅，起初任曹锟的参谋官，协助曹氏镇压辛亥革命。王承斌1912年曾短暂加入过宗社党，王承斌与吴佩孚的芥蒂由此而生，并在后来的十几年里愈演愈烈。\n\n王承斌在曹锟的第三师里稳步晋升，后参与护国运动，成为曹锟的亲信之一。1918年，为了推行段祺瑞的武力统一政策，他在吴佩孚的指挥下进攻湖南，后又在直皖战争中与曹吴二人并肩作战，成为了直系事实上的第三号人物。吴佩孚深恐权位被王承斌取代，竟不断施计离间曹、王二人。\n\n在第一次直奉战争中击败奉系后，王承斌于1922年成为直隶省长，他的天津派和曹锟的保定派共同组成了津保派。为了帮助曹锟当选总统，王承斌曾亲自率队夺取总统印信。但由于吴佩孚的挑拨离间，他最终失去了自己的权位。作为复仇，他协助发动了北京政变。\n\n说服曹锟辞职后，王承斌最终遭到奉系背叛，被迫流亡天津。后来曹锟亲自召回了他，并授予他大帅头衔和陆军总长之职。然而他的恩师却惨遭保皇派杀害，这点燃了王承斌的复仇怒火。作为直系的最后旗帜，他将不惜一切代价确保直系的存续。§!"
  QIE_Gobulo_Runqi: "郭布罗·润麒"
  QIE_GOBULO_RUNQI_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1912年7月8日\n中华民国 北京\n§Y军旅生涯：§L\n郭布罗·润麒出生在一个与爱新觉罗家族有着悠久渊源的满洲贵族世家。就在清朝第一次被推翻后不久，郭布罗·润麒出生。他从小就对工程感兴趣。他进入青春期时正处于德国对中国干预达到顶峰的时代。他童年最鲜明的记忆之一，是10岁时在天津租界参加姐姐婉容与流亡皇帝的婚礼。在德国的干预下他的姐夫重登皇位后，他从一群商人和武官处学会了德语，这些人在20世纪20年代末和30年代初的经济繁荣时期来到北京。这最终促成他进入柏林军事学院，在校期间他取了一个德语名字“鲁普雷希特”。1935年，他结束了欧洲之旅，回到中国。在校期间他受到教员古德里安的启发，对装甲战争和机械化产生了浓厚的兴趣。在某种程度上，他比其他满族人对德国人更有好感，但在20世纪20年代末和30年代初的繁荣时期，他在柏林目睹的堕落与道德败坏使得他没有成为一个彻底的亲德派。\n§Y重要信息：§L\n在柏林，他迷上了美国电影，而他则把这些电影推荐给了他的姐夫，同为电影迷的溥仪皇帝。\n顺带一提，他是个经常被媒体追捧的热点人物，同许多知名京剧演员的风流韵事使他成为了小报的宠儿。"
  QIE_zhang_qihuang: "张其锽"
@@ -111,6 +116,8 @@
  QIE_XIN_SHILIAN_ARMY_DESC:0 "§Y陆军将领介绍\n生于：§!§g1885年；大清帝国、盛京将军辖区承德县§!\n§Y军旅生涯：§!§g邢士廉出生在一个满洲正蓝旗家庭中，他曾在奉天念过中学并以优异的成绩毕业。1908年，在官费资助下，他前往东京振武学校学习骑兵战术，后入陆军士官学校第8期骑兵科，与杨宇霆、臧式毅同班。邢士廉于1913年回到中国，自1916年起，在杨宇霆的引荐下，于张作霖麾下的奉系军队中服役。1925年，邢士廉被指派为淞沪戒严司令，他镇压了反对帝国主义和军阀割据的大规模示威游行活动（即五卅运动）。这次活动被称为“五卅惨案”，十几名学生和工人被射杀。虽然此后邢士廉稳步青云，并在直奉战争中为奉系军阀立下了汗马功劳，他却并不为大帅和少帅所器重。因此，他在1927年宣统复辟后投靠了他的满洲同胞。然而，在军政要务大多为直系军阀成员把持的情况下，邢士廉此后的军旅生涯也不乐观，除非北京的权力基础发生变化……§!\n\n§Y重要信息：虽然邢士廉脱离了奉系军阀，但他仍然与杨宇霆保持着良好的关系，而只要能谋得一官半职，邢士廉愿意投靠任何人。§!"
  QIE_zhang_yinwu: "张荫梧"
  QIE_ZHANG_YINWU_ARMY_DESC:0 "§Y陆军将领介绍\n生于：§!§g1891年；大清帝国、直隶省保定§!\n§Y军旅生涯：§!§g虽然张荫梧出生于保定，他却在黑龙江省陆军小学就读，此后于1916年才入学保定陆军军官学校第5期生，学习步兵战术。在他于1918年毕业以后，他曾经短期内在山西担任过基层指挥官、参谋以及军训副主任，在任上他受到了阎锡山的青睐。1926年，冯玉祥发动反叛，被逐出北京并撤往山西，张荫梧曾率领晋系军队抵抗冯玉祥的国民军，并在战场上负伤，因此暂时辞职归乡。当第四次直奉战争爆发之时，张荫梧加入了直系军队，他的部队则成为了保卫北京的先头部队。1927年宣统复辟以后，他回到了他的故乡，并致力于地方教育事业。现在，因为复辟的清廷需要发挥他的才能，他又在数名中国青年党成员的邀请下重新加入了军队。§.\n\n§Y重要信息：张荫梧是乡村自治运动的支持者，也是他故乡一所小学和一所中学的校长，在那里，学校将教育、军事训练以及农业实践结合到一起。张荫梧也是中国青年党的一名成员。"
+ QIE_yan_huiqing: "颜惠庆"
+ POLITICS_QIE_YAN_HUIQING_DESC:0 "§Y生于：§!§L1877年4月2日；大清帝国、江苏省上海县§!\n§Y背景：§!§L颜惠庆接受了良好的启蒙教育，后前往美国学习，曾获得高度赞誉，结识了伍廷芳、周自齐并于他们建立了深厚的友谊。\n\n颜惠庆通过伍廷芳的关系，成为中国驻美使馆的职员。在周自齐的推荐下，颜惠庆奉召回国出任外务部新闻处处长。辛亥革命爆发后，他得到了袁世凯的器重。\n\n颜惠庆曾担任驻德公使，也曾担任凡尔赛和会的顾问，由于对和会极为失望而提前离席回国。后来，颜惠庆受命署理靳云鹏内阁的外交总长，在连续三届内阁中担任外交总长，于1921年出任代理国务总理。1924年，在曹锟的要求下，颜惠庆再度出任国务总理，但因北京政变而迅速倒台。\n\n吴佩孚于1926年重返北京后，颜惠庆内阁也得以再度上台。在与张作霖发生争执后，颜惠庆曾一度退出政坛，并将主要精力放在支持红十字会上。后来，他短暂出任驻美公使。因美国政局动荡，颜惠庆被召回国内。\n\n被选为总统的颜惠庆和他那些外交系中的同事们一样，心怀一丝不苟的职业精神。虽然颜惠庆缺乏具体的政治意识形态，但他以其真诚弥补了这一空缺。§!\n\n§Y备注：颜惠庆的英语非常流利，造诣极深。\n他学生时期就成绩优异，长年致力于推动教育发展，曾为多所中国大学争取到经济援助，并因此闻名。§!"
 
  QIE_manchu:0 "大清帝国维新国策树"
  QIE_zhili:0 "大清帝国直系军阀国策树"
@@ -786,6 +793,8 @@
  QIE_zhili_kill_GXC_desc:0 "愚蠢的南方人难道认为他们可以违逆我们吗？随着日本和奉天政府都被平定，我们现在可以向南进发，消灭这些叛徒。"
  QIE_zhili_kill_YUN:0 "消灭@YUN [YUN.GetName]"
  QIE_zhili_kill_YUN_desc:0 "为了统一中国，必须消灭藏在云南山区的叛匪！"
+ QIE_zhili_kill_XSM:0 "消灭@XSM [XSM.GetName]"
+ QIE_zhili_kill_XSM_desc:0 "为了统一中国，必须消灭青海、甘肃的叛匪！"
  QIE_zhili_kill_SZC:0 "消灭@SZC [SZC.GetName]"
  QIE_zhili_kill_SZC_desc:0 "内战结束后，[SZC.GetName]不再将我们视为中国公认的统治者。我们必须用严厉的方式惩罚他们曾经犯下的错误！"
  QIE_zhili_kill_HNN:0 "消灭@HNN [HNN.GetName]"
