--- a/localisation/KR_Sichuan_l_simp_chinese.yml
+++ b/localisation/KR_Sichuan_l_simp_chinese.yml
@@ -29,9 +29,9 @@
  SZC_Tian_Clique_party:0 "田颂尧派（保定系）"
  SZC_Tian_Clique_party_long:0 "保定系田颂尧派(Tian Clique of the Baoding Department)"
  SZC_Zhili_Clique_Civilian_party:0 "直系军阀"
- SZC_Zhili_Clique_Civilian_party_long:0 "直系军阀（文官派）(Zhili Clique (Civilian Wing))"
+ SZC_Zhili_Clique_Civilian_party_long:0 "直系军阀（文官派）(Zhili Clique (Civilian Wing))\n§g直系军阀起源于冯国璋的登顶。冯国璋代行大总统职权期间主张南北和谈，反对国务总理段祺瑞的武力统一主张，此时围绕在冯国璋身边的人就组成了直系军阀的雏形。1919年冯国璋去世后，直系军阀分裂成三派军阀——曹锟、吴佩孚和王承斌三人的派系，之后直、奉、皖三家军阀展开混战，1922年，直系取得了上风。\n\n直系在随后数年间掌控了北洋政府，但齐燮元与卢永祥间的江浙战争引发了第二次直奉战争，而原直系将领冯玉祥临阵倒戈，发动北京政变驱逐了曹锟大总统与吴佩孚，直系的势力由此从巅峰一落千丈。尽管直系曾在之后的空位期再度巩固了权力，但这次他们却被彻底赶出了中原。直系在八省崩溃时作壁上观，然后遭到了卑鄙无耻的清廷背刺。在这次政变中，直系军阀的一把手和二把手双双殒命，三把手王承斌带领着残余的部队撤到了四川省。\n\n直系军阀的恩庇网络在此次事变中损失惨重，无数兵马也在中原的战斗中牺牲，直系的残党则与杨森达成了协议。如今，直系残党中的文官们紧密团结在足智多谋、受人尊敬的外交官颜惠庆周围，希望提出一个可行的方案来取代王承斌的军事统治。这些文官团结一致，希望改革北洋政府，以避免这样的灾难再次上演。§!\n"
  SZC_Zhili_Clique_Military_party:0 "直系军阀"
- SZC_Zhili_Clique_Military_party_long:0 "直系军阀（军事派）(Zhili Clique (Military Wing))"
+ SZC_Zhili_Clique_Military_party_long:0 "直系军阀（军事派）(Zhili Clique (Military Wing))\n§g直系军阀起源于冯国璋的登顶。冯国璋代行大总统职权期间主张南北和谈，反对国务总理段祺瑞的武力统一主张，此时围绕在冯国璋身边的人就组成了直系军阀的雏形。1919年冯国璋去世后，直系军阀分裂成三派军阀——曹锟、吴佩孚和王承斌三人的派系，之后直、奉、皖三家军阀展开混战，1922年，直系取得了上风。\n\n直系在随后数年间掌控了北洋政府，但齐燮元与卢永祥间的江浙战争引发了第二次直奉战争，而原直系将领冯玉祥临阵倒戈，发动北京政变驱逐了曹锟大总统与吴佩孚，直系的势力由此从巅峰一落千丈。尽管直系曾在之后的空位期再度巩固了权力，但这次他们却被彻底赶出了中原。直系在八省崩溃时作壁上观，然后遭到了卑鄙无耻的清廷背刺。在这次政变中，直系军阀的一把手和二把手双双殒命，三把手王承斌带领着残余的部队撤到了四川省。\n\n直系军阀的恩庇网络在此次事变中损失惨重，无数兵马也在中原的战斗中牺牲，直系的残党则与杨森达成了协议。如今，直系残党中的军人骨干们团结在王承斌大帅周围，渴望能收复故土，再造北洋政府。§!\n"
  SZC_Self_Government_Party:0 "自治政府党"
  SZC_Self_Government_Party_long:0 "自治政府党(Zizhi Zhengfu Dang)"
  SZC_Three_Principles_Party:0 "三民党"
@@ -148,8 +148,9 @@
  SZC_political_reform:0 "政治改革"
  SZC_new_constitution_idea:0 "成都宪法"
  SZC_1923_constitution_idea:0 "1923年宪法"
- SZC_militarism:0 "军国主义"
+ SZC_1923_constitution_idea_desc: "1923年曹锟宪法是一部意义非凡的进步立法，也许代表着北洋理想主义的巅峰，以及对于直系良善的期冀。曹锟宪法标志着民国北洋政府在段祺瑞和安福俱乐部公然滥用职权的动荡后，使北洋政府正规化的一次重要尝试。该宪法为了建立结构清晰、组织分明而权力集中的政府，给了大总统极大的行政权。然而，其组成中同样也具有权力分立、确保民权等内容的清晰轮廓。不幸的是，十年前该宪法的推出与曹锟贿选的丑闻时间上过于接近，因而被指责为独裁、腐败，由是未能推行。在这个混乱的新时代，曹锟宪法的再次实施标志着稳定政局的又一次尝试。滥用行政权力的漏洞比比皆是，人们此刻只能相信政府机关才能够真正代表人民的意愿。"
  SZC_behind_manchu_lines_idea:0 "满人的战线后方"
+ SZC_behind_manchu_lines_idea_desc:0 "保皇派表面上的军事实力碾压我军，可他们不知道直系的影响力网络已然深入了中原大地。我们敬爱的保定王被满清皇族无情地杀害了，可他的关系网仍然强大。他们愿意鼎力相助，帮助我们消灭敌人。"
  SZC_legation_aid_tooltip:0 "我们将能通过其他来源进口谷物。"
  SZC_Ask_Legations_For_Help_tooltip:0 "我们将向位于上海的使馆城市工部局求援。"
  SZC_importing_grain:0 "没有粮食正在进口中"
@@ -789,7 +790,7 @@
  SZC_A_New_China:0 "新中国"
  SZC_A_New_China_desc:0 "联省派现在是中国无可置疑的领袖了。在联省主义的领导下，新中国诞生了！中国人民终于自由了！中国人民终于当家做主了！联省主义万岁！共和国万岁！"
  SZC_The_Zhilis_Last_Stand:0 "直系的最后一战"
- SZC_The_Zhilis_Last_Stand_desc:0 "尽管大帅吴佩孚被害给直系造成了重大打击，但是我们应该像凤凰涅槃那样浴火重生。在蒋百里将军的指导、在四川的老朋友帮助下，我们将在四川作我们的最后一搏，最终彻底地打倒伪帝。"
+ SZC_The_Zhilis_Last_Stand_desc:0 "尽管大帅吴佩孚被害给直系造成了重大打击，但是我们应该像凤凰涅槃那样浴火重生。在津门大帅的督导、在四川的老朋友帮助下，我们将在四川作我们的最后一搏，最终彻底地打倒伪帝。"
  SZC_Industrial_Expansion:0 "工业发展"
  SZC_Industrial_Expansion_desc:0 "我们当下的任务是消灭那些驱逐了我们的叛徒，这无疑是项艰巨的任务。如果我们想立刻同清政府作战，四川薄弱的军事工业是担不起大任的。如果我们想要夺回满清遗老窃走的一切，我们就必须让我们的工业翻番又翻番。"
  SZC_Contact_An_Old_Ally:0 "联络旧盟友"
@@ -806,8 +807,8 @@
  SZC_Behind_Manchu_Lines_desc:0 "尽管我们中的许多人都因溥仪小儿的追捕而被迫逃亡，但是清朝老臣中仍有不少人同情我们并愿意为我们充当敌后眼线。一旦我们将他们秘密结合成团，日后当我们从暗处对清军进行破坏时，清军将毫无喘息之机。"
  SZC_Rally_The_Zhili_Remnants:0 "召集直系残党"
  SZC_Rally_The_Zhili_Remnants_desc:0 "在这危急时刻，任何忠诚的士兵和军官都是物超所值的。随着四川成为了直系的最后一道防线，我们十分有必要通告我们的朋友和盟友，让他们知道四川是一个安全的避难所，是一个清政府秘密警察的手臂所不能触及的地点。"
- SZC_Embrace_The_Civilian_Wing:0 "拥抱民主一方"
- SZC_Embrace_The_Civilian_Wing_desc:0 "我们决不能用武力来再度统一中国，这样只会让中国重新陷入军阀混战之中。我们必须拥抱人民，采取更为开明的治理模式。"
+ SZC_Embrace_The_Civilian_Wing:0 "改革之路"
+ SZC_Embrace_The_Civilian_Wing_desc:0 "改革的前景一片黯淡！津门大帅颁布了某种形式的戒严法，其将实施直至光复北京。这肯定是算不上好的。满清复辟无疑暴露了直系旧政权的弊病。要想重新赢得人民敬仰、建立起民国北洋政府，我们就必须采用更加开明的治理模式。"
  SZC_Political_Reform:0 "政治改革"
  SZC_Political_Reform_desc:0 "采用文官政治需要对我们的旧体系做出重大改革。我们首先必须采取行政体系改革，来为我们接下来的工作奠定基础。这样做能为我们今后的工作树立大致框架。"
  SZC_A_New_Senate:0 "新咨议局"
@@ -822,6 +823,8 @@
  SZC_Embrace_Meritocracy_desc:0 "长期以来，我们的军队发展大多依靠血缘纽带、人际裙带和收受贿赂，而非人员的真才实学。现在我们必须改变这一现状了，我们应该推行严格的唯才是举政策改革直隶军，纠正这一错误。"
  SZC_Reform_The_Military:0 "军事改革"
  SZC_Reform_The_Military_desc:0 "我们将从各方面彻底改造军队。鉴于领导力的提高，没有了困扰我们多年的裙带关系和腐败问题，是时候推行改革，推动我们军队解构和军事理论现代化，以适应不断进步的战场。"
+ SZC_march_of_the_grieving_army:0 "哀兵奋进"
+ SZC_march_of_the_grieving_army_desc:0 "我军悲恸，实乃哀兵。因为我们不仅失去了自己的领袖，也失去了一位最好的指挥官。尽管王大帅、吴大帅二人素有旧怨嫌隙，但到头来他们也要担起同一份责任。吴大帅尽忠到底，彻底履行了自己的责任。毫无疑问，他是为了在枪林弹雨中保护曹总裁。那同样，王大帅和剩下的直系军人也必须不断向前。至少，这也是出于自己的哀思。"
  SZC_Continue_Military_Primacy:0 "继续军事优先"
  SZC_Continue_Military_Primacy_desc:0 "杀害玉帅的刽子手决不能逍遥法外。他的鞠躬尽瘁将是四川新政府的榜样，新四川政府将在他的感召下，在这个动乱的时代也时刻把公义置于一切之上。在我们天赋秉异的军队指导下，我们将在直隶的指导下重建秩序与荣耀。"
  SZC_Restore_The_1923_Constitution:0 "恢复1923年宪法"
@@ -838,8 +841,8 @@
  SZC_Military_Intelligence_desc:0 "行动之前，我们必须已领先于人。授权给我们的军事情报机构，让他们行动更加自由，我们可以了解到敌人接下来做出的每个部署——不论是他们想从内部还是从外部威胁到我们。四川人民乃至中国广大地区的人在如此英勇的小伙子们保护下，晚上必然能高枕无忧。"
  SZC_Prepare_The_Final_Offensive:0 "准备最后一役"
  SZC_Prepare_The_Final_Offensive_desc:0 "完事就绪，只欠东风。全社会都支持着我们的目标，只需我们一声令下，军队便会开拔前进击溃敌人。杀害玉帅的刽子手，你的末日来了！"
- SZC_Shining_Republic:0 "光耀共和国"
- SZC_Shining_Republic_desc:0 "尽管北京的歹人妄想蚍蜉撼大树，但我们最终还是证明了我们才是中国的合法政府。不久以后，我们将把我们的合理宣称付诸实现；加倍努力，我们期待着推翻满清遗老遗少的那一天。"
+ SZC_Shining_Republic:0 "还乡，复仇"
+ SZC_Shining_Republic_desc:0 "此冤仇也。此不得不报之冤仇也。这便是大帅如今前进的动力。带着文官、北洋残部和最忠诚的将士，直系必将迎着万众期待，让黄龙旗灰飞烟灭。这便是对我们过去数月的坚韧和准备的真正考验。只许成功，不许失败！这不仅是为了列祖列宗，也是为了中华的根本！"
  SZC_Triumphant_Return:0 "凯旋归来"
  SZC_Triumphant_Return_desc:0 "在满清遗老遗少以为消灭了我们后，我们如今凯旋归来。现在，这帮家伙和他们的走狗再度伏地求饶。现在，在清政府再一次荼毒中华大地后，我们必须巩固我们的权力，重建中华大地的秩序，并以其人之道还治其人之身——让所有人知道，直系才是如今中国的管事人！"
  SZC_Deal_With_The_Conspirators:0 "处置叛徒"
@@ -864,8 +867,8 @@
  SZC_Tie_Up_Loose_Ends_desc:0 "现在，中国内地的所有省份已经掌控于手。蒙古、西藏和其他边远省份也必须重归祖国！"
  SZC_Kickstart_The_Armament_Industry:0 "启动军事工业"
  SZC_Kickstart_The_Armament_Industry_desc:0 "清政权的垮台并不意味着和平已降临到中国。我们需要准备将军事生产作为我们工作的一个关键领域，以便我们能应付将来无可避免的战争。"
- SZC_Rebuild_Beijing:0 "重建北京"
- SZC_Rebuild_Beijing_desc:0 "在经历了近年来的冲突和争夺后，北京许多地方仍然伤痕累累。现在我们从清政府手中夺回了这座城市，我们必须加倍努力修复这些创伤，重建这座古城，让她北京成为中国工商业的中枢。"
+ SZC_Rebuild_Beijing:0 "重归北京"
+ SZC_Rebuild_Beijing_desc:0 "在近年来的战乱冲突之下，北京的大部分地区已经伤痕累累。经历了直皖战争、直奉战争、北京政变乃至满清复辟，我们勇敢的北京城受了太多磨难。现在我们从满清手中夺回了这座城市，就应当努力弥合伤痕，将这座古都重建为中国的工商中枢。"
  SZC_Expand_The_Jinghan_Railroad:0 "扩建京汉铁路"
  SZC_Expand_The_Jinghan_Railroad_desc:0 "鉴于我国绝大多数地方都被战火所波及，延长京汉铁路将极大的有助于重建工作的开展并连通更多省份之间的交流。"
  SZC_Daye_Hanyang_Development_Scheme:0 "大冶-汉阳发展计划"
@@ -1554,26 +1557,26 @@
  sichuan.263.t:0 "四川提供支援"
  sichuan.263.d:0 "似乎有好事来了。我军最近收到了来自四川的朋友们发来的源源不断的支援。联盟或许陷入了困难时期，但是至少我们仍然还有人可以依靠！我们将充分利用这一切，把叛党从我们的土地上彻底扫除！"
  sichuan.263.a:0 "终于有好消息了！"
- sichuan.264.t:0 "蒋百里抵川"
- sichuan.264.d:0 "蒋百里，玉帅吴佩孚的二把手，一度被人认为在洛阳陷落后已经遇难。然而昨晚，一队卡车驶达了成都郊区。由于未曾事先登记且车队没有标识，一名巡逻兵示意让车队原路返回。但是当车队缓缓停下后，这名巡逻兵被震惊了。排头车上缓缓走下一名男子，男子的胳膊上裹着血迹斑斑的绷带，脸上遍布着弹片造成的伤口——他是蒋百里。\n\n卫兵迅速的互送车队抵达了[SZC.GetLeader]在城中心的官邸，在那里他接见了蒋百里以及直系残余的高级将领。蒋百里恳求[SZC.GetLeader]，恳求他积蓄力量召集军队，再一次驱逐满洲人的统治。"
- sichuan.264.a:0 "联合起来，打倒忘恩负义的满人！"
- sichuan.264.b:0 "把他送回去"
+ sichuan.264.t:0 "王承斌大帅抵川"
+ sichuan.264.d:0 "最近的满清复辟让很多人都怀疑北直系已大难临头，即将被扫入历史的垃圾堆。在残酷的直满战争中，直系的三号人物王承斌大帅在最后关头集结直军试图夺回北京，并损失惨重。曹锟和吴佩孚的双双陨落使直系一开始就士气低落。没有了玉帅，他们真的还有机会吗？他们真的能战胜复辟的满清吗？更别提其他的军阀了。死神扬起了手中的镰刀，准备一劳永逸地终结直系。\n\n然而，有一个人挡在了死神之前。他唾弃保皇派的滔天野心，蔑视他们的血腥杀戮，痛惜自己逝去的恩师曹锟。这个人就是政变发生时并未在北京的陆军总长、大帅王承斌。他推行内战期间的紧急策略，逐渐聚集起了混乱的直军，哪怕付出一切，也要维护直系的霸权，也要为战友们报仇——吴佩孚甚至也在其中。他绝不会让他们的回忆化为乌有。王承斌负责殿后，他被迫目睹了保皇军的所有暴行——倾覆城池，夷灭洛阳，喋血武汉……一切都付诸东流。\n\n多数人都认为王承斌死在了洛阳、武汉或其他地方的战斗中，可[SZC.Capital.GetCapitalVictoryPointName]内的所有人都没有预料到昨晚这次不起眼的拜访。一队磨损不堪、没有标记的卡车来到了[SZC.Capital.GetCapitalVictoryPointName]郊区。一名巡逻兵命令车队原路返回，然而车停后，他不敢相信自己面前的这个人是谁。那人缓缓走下卡车，手臂上缠着血迹斑斑的绷带，脸上满是弹片的伤口。他是王承斌大帅。\n\n卫兵立即将车队接引到[SZC.GetLeader]位于城中心的大院，他在那里迎接了王承斌和北京指挥系统的残余人员。王承斌的眼中喷薄着复仇之火，请求[SZC.GetLeader]整军备战，对人神共愤的帝制走狗重启战端。"
+ sichuan.264.a:0 "“中国合法政府誓做最后一搏……”"
+ sichuan.264.b:0 "遗憾啊，把这位失势的大帅送走。"
  sichuan.265.t:0 "蒋百里复出"
  sichuan.265.d:0 "尽管洛阳发来的消息发誓说他们亲眼见到蒋百里在反攻城池的战斗中中弹死去，但是有传言称，这位玉帅的门徒已经逃亡到了四川，在那儿他同[SZC.GetLeader]一道已经准备好发动一系列的战役来反抗我们！[SZC.GetLeader]曾忠于吴佩孚的旧政权，而这些直系的残党必须被彻底消灭！"
  sichuan.265.a:0 "他妈的"
  sichuan.265.b:0 "（扮演直系残党继续游戏）"
  sichuan.266.t:0 "不断增长的裂痕"
- sichuan.266.d:0 "自从1927年以来，直系军阀内部军政派系从未弥合过。尽管曾经吴佩孚的个人魅力和天赋才能将二派联合起来，但是如今的流亡却让两派进一步分裂。颜惠庆，一位高级官员，常常同蒋百里等直系军队残余势力就如何采取最佳行动方案进行争论，这在前四川省政府内部开始种下深深地裂痕。"
+ sichuan.266.d:0 "长期以来，直系军阀内部就有多个派别。北直系事务由曹锟、吴佩孚、王承斌主持，其中曹吴已经去世；南直系则任由孙传芳和齐燮元恣行无忌。这两大支内部甚至还有更复杂的派系。北直系内部存在洛阳派和津保派之分，分别由吴佩孚和曹锟领导；南直系这边，孙传芳所有下属对他的忠诚都聊胜于无。到这还没完呢：还有掌握笔杆子的“文臣”和握着枪杆子的“武将”之间的分歧。\n\n直系于二十年代末重夺北京，他们此时试图将自身重组为合法政府。文臣掌控了大多数国会和内阁席位，武将则退让到地方，控制各省和自己的那部分省军或中央军。曹锟和吴佩孚死后，直系内部“文武”之间、军事与政治之间错综复杂的平衡被即刻撕裂了。\n\n吴佩孚和曹锟原本各占山头，他们的离去让王承斌和同僚之间立刻剑拔弩张。由于紧张的关系没有舒缓的迹象，文官们选择靠向大度的颜惠庆。同时拥有担任高级外交官、官僚、总理和大总统经验的颜惠庆开始频繁地与王承斌以及直系的其他军官唇枪舌剑，试图找到最好的行动方针。他们的不和让前四川省政府的许多成员都忧心忡忡——一道深刻的裂痕正在显现。"
  sichuan.266.a:0 "我们绝不会被分裂！"
- sichuan.267.t:0 "文官派掌权"
- sichuan.267.d:0 "颜惠庆和直系内部的文官派胜利了！该组织主要由前和谐社团的官僚组成，致力于维护文官对军队的控制，避免发生又一场由于失误而引发的宣统维新——尽管他们能不能真正阻止尚不得而知。"
- sichuan.267.a:0 "我们必须亡羊补牢"
- sichuan.268.t:0 "军事派掌权"
- sichuan.268.d:0 "蒋百里带领着的直系残余势力的军事派在成都的权力斗争中获胜。他们许诺将迅速攻击仍然软弱不堪的满洲政府，中国各地区已经准备好进入又一次军阀混战了。"
- sichuan.268.a:0 "我们将不惜一切代价夺回我们所失"
- sichuan.269.t:0 "动员直系军官团"
- sichuan.269.d:0 "我们的最高指挥部在灾难性的政变及随后的内战中彻底摧毁被摧毁了。许多幸存下来的人则将其怪罪于是吴佩孚没有能力进行有意义的改革，在这场流亡中，幸存者们开启了大规模的改革。西式学说正得到采纳，蒋百里等幸存军官则希望这些举措将有助于击败新生且缺乏经验的满洲军队。"
- sichuan.269.a:0 "好极了"
+ sichuan.267.t:0 "外交元老掌舵"
+ sichuan.267.d:0 "对那些直系内部圈子中人而言，颜惠庆是个奇人：那些恩庇网络内的人鲜少将颜惠庆视作自己人。颜惠庆并非直系的正式成员，而是北洋政府中享有盛誉且几乎不关心政治的外交系的代表。不过，颜惠庆多次代表直系出任国务总理或大总统，为维持北洋政府的运转鞠躬尽瘁。\n\n如今颜惠庆再次证明，为了维持直系稳定和避免无政府状态，他是必不可少的人物。利用自己与官僚机构间的广泛关系和无可挑剔的从政记录，颜惠庆成功获得了足够的支持，并利用自己在政府中的职位向王承斌大帅提出请求，要求临时政府走文官路线，王大帅接受了。颜惠庆还当选了流亡政府的大总统，顾维钧、白坚武、王克敏、王承斌大帅和高凌霨等人加入了颜惠庆的政府，使得这个政府在北洋官僚与直系残党之间达成了精心的平衡。\n\n颜惠庆心怀实现文官控制军队的崇高目标，并致力于让满清复辟的这样的愚蠢失误不再上演，许多人对他们的目标充满希望，但也有许多人怀疑他们能否取得如此重大的成就。"
+ sichuan.267.a:0 "我们必须亡羊补牢。"
+ sichuan.268.t:0 "津派接班人崛起"
+ sichuan.268.d:0 "“三把手”、“津派接班人”、“陆军总长”、“民国大帅”、“直系的叛徒”……王承斌拥有着形形色色褒贬不一的称号。相比于全国尊敬、上下归心的玉帅吴佩孚，王承斌只能屈居其次。然而，王承斌可能是唯一能让吴佩孚感到害怕的人，因为他确实威胁到了玉帅在直系军阀内部的地位，毕竟王承斌与曹锟之间的交情比之吴佩孚更为深厚。王承斌不惜一切代价帮助他的恩师，但最终在吴佩孚的操纵之下，他还是被迫隐退了，这也导致他在1924年北京政变当中的反叛。\n\n王承斌在第三次直奉战争期间拨乱反正，再度证明了自己是曹锟总裁在军界最忠实的拥趸，充当他的喉舌，并时刻提醒人们保定王对军队组织的掌控日益增强。而在那命运之日，他是少数几个怀疑有政变迹象的人之一，在接到有关军队频繁调动的报告时就与玉帅进行了沟通。尽管如此，他到底没能拯救他的恩师，也没办法拯救他所厌恶的吴佩孚。他悔恨交加，却仍下令对叛军发起无情的反攻，试图在其掀起波澜之前将其扼杀。\n\n此举最终徒劳无功，而如今的他身处此地，变成了一个渴望复仇的幽灵，一具行尸走肉。王承斌一跃而起，在直系军阀内身居高位，受到了来自津、保两派全体的景仰，甚至一部分洛派成员也开始讨好这位津门大帅。在他的传奇经历加持下，王承斌设法迫使了颜惠庆手下的文官在这一紧要关头向军队的优势地位卑躬屈膝。他向剩下的最高指挥部成员承诺，将迅速对刚刚起步、力量微薄的满清军队进行复仇，而直系内部以及全国的很多人都在为直系的最后一战而准备着。"
+ sichuan.268.a:0 "开膛破肚，一个不留！"
+ sichuan.269.t:0 "新军迎新"
+ sichuan.269.d:0 "直系关系网被政变彻底搅乱了，没有了头领和二把手，可以说完全无法修复了。最近在张其锽、蔡成勋等潜在继任者默许下，王承斌被确立为北直系的绝对权威。他树立了还算有模有样的权威，至少足以代替玉帅召集起成规模的抵抗力量。\n\n然而残存的直系军事集团如同一具千疮百孔的行尸走肉。仍在继续的战斗已让直军损失大量军官，整个指挥系统急需改革和现代化，年轻的幸存军官应当被提拔至关键位置。昔日吴佩孚迷信其完美的军官自主体系，无力也无愿做出有意义的改革。王承斌大帅深感其误，于是为了找到曾行所受职责外之事的杰出人才，写信予一众指挥官寻求推荐。\n\n鉴于如今流亡之势，又要执行如此大规模的改革，王承斌大帅决定与蒋百里等人合作，执行和使用其丰富的军事战略知识，以期用新战法粉粹新生的、经验不足的保皇派军队。细想一下，也唯有让普通士兵怀有忠诚与坚定，才能教那直系见到报仇雪恨之日。"
+ sichuan.269.a:0 "在王承斌大帅的领导下走向未来！"
  sichuan.270.t:0 "加入直系的联盟？"
  sichuan.270.d:0 "[SZC.GetName]，宣称代表了直系的最后残余势力，继承了直系的大统，他们已同我们作了接触。他们希望我们能加入他们，共同打倒满洲威胁，在前直系的旗下重建光耀的共和中华！"
  sichuan.270.a:0 "当然！老朋友危难之时怎么不雪中送炭"
@@ -1855,3 +1858,55 @@
  SZC_KMT_national_populist_DEF:0 "四川"
  SZC_Grand_Plan:0 "入侵[FROM.GetName]"
  SZC_seeking_help:0 "我们已向它国寻求援助"
+
+ SZC_chosen_yan_huiqing_tt: "§C如果我们力推颜惠庆当大总统：§!"
+ SZC_chosen_wang_chengbin_tt: "§C如果我们力推王承斌督导机宜：§!"
+ SZC_improve_legitimacy_tt: "§G民众对我们政府的看法将会改善！§!"
+ SZC_the_zhilis_last_stand_tooltip: "如果敌人认为我们遭了这样的打击便会退缩，那他们可太不了解直系了。"
+ SZC_a_state_run_by_competence_tooltip: "§L铲除直军“关系”体系的斗争无疑道阻且长，但最终我们将会获得§Y50§!£GFX_army_experience§!§!"
+ SZC_prepare_the_final_offensive_tooltip: "§L为了驱逐鞑虏这一正义的事业，我们必须全心全意献出§!§o一切§!§L。然而，一旦努力松懈下来，这种推崇全面战争的弊端肯定也会显现。§!"
+ SZC_zhili_remnant_tooltip: "§L靡不有初，鲜克有终。§!"
+ SZC_zhili_remnant_reject_tooltip: "§g行必虑终，谨言慎行。§!"
+
+ SZC_all_for_the_reconquest:0 "矢志北还！"
+ SZC_all_for_the_reconquest_desc:0 "要想再见到壮美的北京，我们的当务之急就是将一切可用资源投入到四川，服务于我们伟大而光荣的战役。因为克复光荣的民国任务艰巨，需要我们土地上的每一位中华爱国志士竭尽全力、不计代价。"
+ SZC_assistance_of_the_german_giant:0 "德国巨人的援助"
+ SZC_assistance_of_the_german_giant_desc:0 "直系兴衰存亡的最后一道防线就是四川了，可这里既不能做民国政府的长久住所，也不能做昂贵而现代的直系部队的栖身之地。假设德国没有断掉与我们的一切联系，我们就可以利用在德国使馆中的潜在关系，邀请一系列军工制造商在我们的驻地建设新式兵工厂。仰仗于此，但愿我们能早日光复合法领土。"
+ SZC_embracing_meritocracy:0 "迈向任人唯贤"
+ SZC_embracing_meritocracy_desc:0 "也许我们弄出过最蠢的事就是直系的恩庇网。这不过是一种伪装成儒家礼教良好实践的裙带关系秘会。这导致了司令部高高在上，而下级军官却心怀愤懑。很多军官甚至为了得到应有的晋升而在政变中协助了满人。真正的改革不局限于政治体系，还要着眼于军事体制。"
+ SZC_embracing_militarism:0 "迈向军国主义"
+ SZC_embracing_militarism_desc:0 "为了我国的救亡图存，每一位公民都需要带着尚武精神，参与到对军国化民族国家的复兴中来。在蒋百里将军的主持下，中国人民发展着自己的武士道复兴，即为了即将到来的目标而自我牺牲的能力。我们必须重振自己的民族精神，将其凌驾于一切个人之上。"
+ SZC_legacy_of_the_academies:0 "武备学堂之遗"
+ SZC_legacy_of_the_academies_desc:0 "丢了保定、丢了昆明，军事派也失去了自己派系的摇篮。但尽管如此，无论有没有这些专业知识，路还是要继续走下去。我们大部分的军官和指挥官都是这些学堂所激发的尚武精神的传承人。如若我们数典忘祖，那就真是混帐了。"
+ SZC_providing_bread_and_circuses:0 "略施小利"
+ SZC_providing_bread_and_circuses_desc:0 "要想真正赢得民心，光给群众丢出一个“改革”的概念是愚蠢的。因为人民群众现在不想要改革，他们要的是食物、住所、水和幸福安乐的生活。所以“略施小利”这个成语正好适用于我们现在的情况。至于真正的改革，就等到北京恢复了好政府的统治再说吧。"
+ SZC_increasing_pluralisation:0 "促进多元"
+ SZC_increasing_pluralisation_desc:0 "在允许流亡国会进一步参与政治之后，人民群众似乎也开始受我们政治家的妙语所影响，变得关心政事起来。这为我们的政权机关提供了急需的合法性和稳定性，同时也却让这个残缺国会里的在野党支持率得到了提升。"
+ SZC_legacy_of_baoding_and_luoyang_idea:0 "保洛之遗"
+ SZC_legacy_of_baoding_and_luoyang_idea_desc:0 "因高层遭一网打尽而名存实亡的保定、洛阳两派，却严肃而真诚地从军阀摇身一变当了政治家。他们收起了佩刀和步枪，换上西装和领带，成了勤勤恳恳的中式政客。在令人心悸的政变过后，天津派和其他残余势力一起肩负起了重任，与北洋官僚一道继续履行着他们恳切的政治家使命。"
+ SZC_public_safety_bureau:0 "公安局"
+ SZC_public_safety_bureau_desc:0 "公安局是直系的情报机构，在背地里擅自充当秘密警察，名义上听从着刘梦庚、王遇甲的指挥。该机关利用他们在中原和别处的人脉，以及他们为曹锟打理坐探、情报圈子的宝贵经验，可以确保满清复辟这类事件再也不会发生。从事谍报活动、镇压内部异议、反情报工作只是该机关众多得到授权所执行任务的一部分。"
+ SZC_expertise_of_the_military:0 "军事专长"
+ SZC_expertise_of_the_military_desc:0 "我们曾经的军队真堪一支奇迹之师。在玉帅的韬略之下，我军完成过许多惊天动地的任务、创下过许多难以想象的壮举。当然，这些一定程度都要归功于玉帅的将才。王大帅自然不是傻子，不过也算不上兵圣。要想取得胜利，我们就要审视有关战争方方面面的理论。"
+ SZC_dawn_of_the_final_offensive:0 "决战之黎明"
+ SZC_dawn_of_the_final_offensive_desc:0 "责任已落我肩！报应之时终临！如今是对我军新近改革后能力的考验！现在正是伟大斗争的时期，敌人已经占据着我们合法的首都，如果连我们都败了，那不用多说，直系就真的完了。民国北洋政府没法在那背信弃义的老帅庇护下苟延残喘，只能在津门大帅的羽翼下图得生存！中华民国万岁！"
+ SZC_old_hope_and_glory:0 "旧希冀、旧荣光"
+ SZC_old_hope_and_glory_desc:0 "我们人困马乏、士气低落；我们工厂停摆，工人怨声载道。为了取得全面胜利，我们献出了一切可运作的资源，付出了超过极限的代价。虽然压力与泪水终会随风而散，但也会洒向大地，与我们的国家民族永远同在。人们只寄希望于这些牺牲能有所回报。"
+ SZC_sounding_the_bugles_of_victory:0 "吹响胜利的号角"
+ SZC_sounding_the_bugles_of_victory_desc:0 "我们终于做到了！如今直系光复了其在中华民族国家的合法地位。我们不用再被迫与皇帝小儿的走狗们共事，也不用再屈服于洋鬼子了！直系军阀或许曾被驱逐，曾经落得群龙无首，但其最终在王大帅和颜惠庆这样的人身上焕发了新的精神。号角报捷，万民欢呼！"
+ SZC_legitimacy_of_the_republic: "共和制的合法性：§o离心离德§!"
+ SZC_legitimacy_of_the_republic_desc: "嗟乎，何其讽刺。当初在无数烈士为消灭帝制进行的前赴后继的斗争之下，在隆裕太后代表小皇帝溥仪的默许后，民国北洋政府才于1912年建立。人民群众满怀乐观希望，在改革家、革命家们的旗帜下大步向前，体会着新生、年轻、可塑的民国的伟大平等与多元。然而，暴君的阴谋却毁了这一切。在强人与军阀的摧残下，北洋政府本身不过成了当时控制北京的军阀集团所操纵的腐败无能的工具。内阁数月一换，短暂的政府来回变了七次，可就算如此，群众的心里仍抱有希望。\n\n北洋当权派和直系军阀在北京被篡了权，怆惶逃到了四川的亲近盟友这边。然而，这便是保皇派犯下的诸多错误之一。在王承斌大帅的主持下，直系重振旗鼓，辛亥革命的传承没有断绝。然而，群众百姓和一些不太亲近的盟友却怀疑我们是不是在惺惺作态。鉴于直系当年便宜行事抛下了共和，许多人心中我们的民族国家建设方案也不过是一场空谈。不过他们大错特错：大帅之心，矢志雪恨。"
+ SZC_legitimacy_of_the_republic_1: "共和制的合法性：§r微弱希冀§!"
+ SZC_legitimacy_of_the_republic_1_desc: "$SZC_legitimacy_of_the_republic_desc$"
+ SZC_legitimacy_of_the_republic_2: "共和制的合法性：§R割据一方§!"
+ SZC_legitimacy_of_the_republic_2_desc: "$SZC_legitimacy_of_the_republic_desc$"
+ SZC_legitimacy_of_the_republic_3: "共和制的合法性：§C蒸蒸日上§!"
+ SZC_legitimacy_of_the_republic_3_desc: "$SZC_legitimacy_of_the_republic_desc$"
+ SZC_legitimacy_of_the_republic_4_civilian: "共和制的合法性：§l北洋新生§!"
+ SZC_legitimacy_of_the_republic_4_civilian_desc: "嗟乎，何其讽刺。当初在无数烈士为消灭帝制进行的前赴后继的斗争之下，在隆裕太后代表小皇帝溥仪的默许后，民国北洋政府才于1912年建立。人民群众满怀乐观希望，在改革家、革命家们的旗帜下大步向前，体会着新生、年轻、可塑的民国的伟大平等与多元。然而，暴君的阴谋却毁了这一切。在强人与军阀的摧残下，北洋政府本身不过成了当时控制北京的军阀集团所操纵的腐败无能的工具。内阁数月一换，短暂的政府来回变了七次，可就算如此，群众的心里仍抱有希望。\n\n确实，北洋的政治家们是有能力确保一个好政府的。在他们的监管下，技术官僚们加班加点，维持着政治与管理的运转。在其光芒之下，一个新生、改良的民国诞生了。这是一个真正宣称继承了辛亥政治秩序，也同时转变为一台全新、努力机器的民国。民国如今不受军头、军阀操纵，而是人人合作、携手并肩。"
+ SZC_legitimacy_of_the_republic_4_military: "共和制的合法性：§g大帅独尊§!"
+ SZC_legitimacy_of_the_republic_4_military_desc: "嗟乎，何其讽刺。当初在无数烈士为消灭帝制进行的前赴后继的斗争之下，在隆裕太后代表小皇帝溥仪的默许后，民国北洋政府才于1912年建立。人民群众满怀乐观希望，在改革家、革命家们的旗帜下大步向前，体会着新生、年轻、可塑的民国的伟大平等与多元。然而，暴君的阴谋却毁了这一切。在强人与军阀的摧残下，北洋政府本身不过成了当时控制北京的军阀集团所操纵的腐败无能的工具。内阁数月一换，短暂的政府来回变了七次，可就算如此，群众的心里仍抱有希望。\n\n津门大帅真乃英杰！在他的领导下，民国北洋政府才为未来的考验做好了充分的准备。离了王大帅，北洋政府不过一具步履蹒跚、坐以待毙的行尸走肉罢了。如今将士精疲力竭、人心变乱，只有大帅还心系北京，可已经没什么能够帮助我们重夺玉帅的地位。玉帅的在天之灵或许正望着直系叹息，可领导的重任终是落在了王大帅肩上。"
+ SZC_legitimacy_of_the_republic_5_civilian: "共和制的合法性：§9日月光华§!"
+ SZC_legitimacy_of_the_republic_5_civilian_desc: "嗟乎，何其讽刺。当初在无数烈士为消灭帝制进行的前赴后继的斗争之下，在隆裕太后代表小皇帝溥仪的默许后，民国北洋政府才于1912年建立。人民群众满怀乐观希望，在改革家、革命家们的旗帜下大步向前，体会着新生、年轻、可塑的民国的伟大平等与多元。然而，暴君的阴谋却毁了这一切。在强人与军阀的摧残下，北洋政府本身不过成了当时控制北京的军阀集团所操纵的腐败无能的工具。内阁数月一换，短暂的政府来回变了七次，可就算如此，群众的心里仍抱有希望。\n\n在向来可靠的颜惠庆的督导下，辛亥政治秩序也在最初的挫折中得以蓬勃发展。他孜孜不倦地为国尽忠，成功在满清复辟的废墟之上重建了国家。五族共和，是为民族自豪、爱国统一之传承，其将与我们的国家骄傲一并永远高扬。中国人民也终于迎来了新的乐观希望。“卿云烂兮，糺缦缦兮。日月光华，旦复旦兮！”"
+ SZC_legitimacy_of_the_republic_5_military: "共和制的合法性：§6津派民主§!"
+ SZC_legitimacy_of_the_republic_5_military_desc: "嗟乎，何其讽刺。当初在无数烈士为消灭帝制进行的前赴后继的斗争之下，在隆裕太后代表小皇帝溥仪的默许后，民国北洋政府才于1912年建立。人民群众满怀乐观希望，在改革家、革命家们的旗帜下大步向前，体会着新生、年轻、可塑的民国的伟大平等与多元。然而，暴君的阴谋却毁了这一切。在强人与军阀的摧残下，北洋政府本身不过成了当时控制北京的军阀集团所操纵的腐败无能的工具。内阁数月一换，短暂的政府来回变了七次，可就算如此，群众的心里仍抱有希望。\n\n他最终做到了。历经百般斗争、千般磨难、万般险阻，彪炳千古的津门大帅最终见证了北洋再生、国家一统的伟业！虽然许多人担心，他只是自民国建立以来又一个玩弄百官的暴戾军头，但王大帅并没有装出一副比起民国来高高在上的姿态。随着使命已达，国家稳定，中国民主的新时代也可能得以发展。当然了，要在大帅的注视之下。"
